@@ -67,38 +67,38 @@ my @tests = (
 		name => 'regular king move',
 		before => 'r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1',
 		move => 'e1d1',
-		after => 'r3k2r/8/8/8/8/8/8/R2K3R b kq - 0 1',
+		after => 'r3k2r/8/8/8/8/8/8/R2K3R b kq - 1 1',
 	},
 	{
 		name => 'white king-side castling',
 		before => 'r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1',
 		move => 'e1g1',
-		after => 'r3k2r/8/8/8/8/8/8/R4RK1 b kq - 0 1',
+		after => 'r3k2r/8/8/8/8/8/8/R4RK1 b kq - 1 1',
 	},
 	{
 		name => 'white queen-side castling',
 		before => 'r3k2r/8/8/8/8/8/8/R3K2R w KQkq - 0 1',
 		move => 'e1c1',
-		after => 'r3k2r/8/8/8/8/8/8/2KR3R b kq - 0 1',
+		after => 'r3k2r/8/8/8/8/8/8/2KR3R b kq - 1 1',
 	},
 	{
 		name => 'black king-side castling',
 		before => 'r3k2r/8/8/8/8/8/8/R3K2R b KQkq - 0 1',
 		move => 'e8g8',
-		after => 'r4rk1/8/8/8/8/8/8/R3K2R w KQ - 0 2',
+		after => 'r4rk1/8/8/8/8/8/8/R3K2R w KQ - 1 2',
 	},
 	{
 		name => 'black queen-side castling',
 		before => 'r3k2r/8/8/8/8/8/8/R3K2R b KQkq - 0 1',
 		move => 'e8c8',
-		after => '2kr3r/8/8/8/8/8/8/R3K2R w KQ - 0 2',
+		after => '2kr3r/8/8/8/8/8/8/R3K2R w KQ - 1 2',
 	},
 	# Bugs.
 	{
 		name => 'Rook move should not prevent castling on other side',
 		before => 'rnbqkbnr/ppp1pppp/3p4/8/7P/8/PPPPPPP1/RNBQKBNR w KQkq - 0 2',
 		move => 'h1h3',
-		after => 'rnbqkbnr/ppp1pppp/3p4/8/7P/7R/PPPPPPP1/RNBQKBN1 b Qkq - 0 2',
+		after => 'rnbqkbnr/ppp1pppp/3p4/8/7P/7R/PPPPPPP1/RNBQKBN1 b Qkq - 1 2',
 	},
 	{
 		name => 'perft 4 bug 1',
