@@ -3,6 +3,7 @@ Revision history for Perl extension Chess-Plisco
 {{$NEXT}}
 	- fixed exception in quiescence search
 	- implement the UCI stop command
+	- fixed half-move clock reset after castling state change
 
 0.1  2021-09-19
 	- initial version
